syntax="proto3";

package msg;

import "item.proto";
import "money.proto";

/// 用户数据
message User {
    /// id
    int64 ID = 1;
    /// 名字
    string NickName = 2;
    /// 性别
    string Sex = 3;
    /// 物品
    repeated Item Items = 4;
    /// 货币
    repeated Money Monies = 6;
    ///等级
    int32 Level = 21;
    ///经验
    int64 Exp = 22;
}

/// 服务端下发用户信息
//@msg
message S2C_UpdateUserData {
    /// 下发用户数据错误枚举
    enum E_Error {
        Error_ = 0;
        /// OK
        OK = 1;
        /// 没有用户数据
        NotExist = 2;
    }
    /// 错误枚举
    E_Error Err = 1;
    /// 用户数据
    User Data = 2;
}

/// 更新用户信息请求
//@msg
message C2S_UpdateUserData {
    /// 用户id
    string ID = 1;
}

/// 服务端通知用户更新item
//@msg
message S2C_UpdateItems {
    ///获得的
    repeated Item GainItems = 1;
    ///失去的
    repeated Item LostItems = 2;
}
